# SiraLex

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  README.md
api/: README.md  pyproject.toml
api/bundle_builder/: __init__.py  build_bundle.py  cli.py
api/bundle_builder/tests/: test_bundle_builder.py
api/enrichment/: __init__.py  cli.py  enrich.py
api/enrichment/tests/: test_enrichment.py
api/ir_parser/: __init__.py  cli.py  malipense_index.py  malipense_lexicon.py  validation.py
api/ir_parser/tests/: __init__.py  test_golden_fixtures.py  test_index_golden_fixtures.py
api/normalizer/: __init__.py  cli.py  normalize.py
api/normalizer/tests/: test_norm_v1_cross_language_fixture.py  test_norm_v1_golden_fixtures.py
api/search_index/: __init__.py  build_index.py  cli.py
api/search_index/tests/: test_search_index.py
api/snapshot_engine/: __init__.py  canonicalize.py  cli.py  crawler.py  headers.py  models.py  robots.py
docs/: DATASET.md  ROADMAP.md  SOURCES.md
docs/adr/: 0001-repo-layout.md
shared/ir/: __init__.py  models.py
shared/normalization/: __init__.py  manifest.yaml  norm_v1.py
shared/normalization/fixtures/: generate_norm_v1_fixture.py  norm_v1_search_keys.json
shared/sources/: README.md  malipense.yaml
shared/specs/: lossless-capture-and-ir.md  normalization-versioning.md  offline-bundle-versioning.md  pos-tagset.md  provenance.md  snapshot-engine.md
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: bundle_catalog.test.ts  bundle_catalog.ts  bundle_labels.ts  bundle_manifest.ts  bundle_probe.ts  constants.ts  main.ts  phase3_bundle_runtime.test.ts  phase4_remote_install.test.ts  style.css
web/src/idb/: nkokan_db.ts  siralex_db.ts
(+11 files in other folders)
