[project]
name = "nkokan-api"
version = "0.1.0"
description = "Nkokan backend services: snapshot engine, ingestion, and API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "zstandard>=0.22.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
nkokan-crawl = "snapshot_engine.cli:main"
nkokan-parse-ir = "ir_parser.cli:main"
nkokan-build-index = "search_index.cli:main"
nkokan-build-bundle = "bundle_builder.cli:main"
nkokan-enrich = "enrichment.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["snapshot_engine", "ir_parser", "search_index", "bundle_builder", "enrichment"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
